# SongStringParser

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/songstring_parser/: __init__.py  conf.py  errors.py  models.py  parser.py
src/songstring_parser/steps/: step1_strip_path_and_extension.py  step2_normalize.py  step3_albumprefix.py  step4_parse_brackets.py
src/songstring_parser/steps/brackets/: __init__.py  classifiers.py  helpers.py  models.py
tests/: conftest.py  test_parser.py
tests/data/: test_songs.json
tests/unit/: test_step1_path_ext.py  test_step2_normalize.py  test_step3_track_index.py  test_step4_brackets.py
tests/utils/: state_factory.py
